Adding catalog files

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ robots.txt
 template.html
 test.php
 test_style.css
-catalog
 admin/model
 admin/language/english/*
 !admin/language/english/module
@@ -38,3 +37,26 @@ admin/view/template/*
 !admin/view/template/module
 admin/view/template/module/*
 !admin/view/template/module/worktime.tpl
+catalog/model
+catalog/language/english/*
+!catalog/language/english/module
+catalog/language/english/module/*
+!catalog/language/english/module/worktime.php
+catalog/language/russian/*
+!catalog/language/russian/module
+catalog/language/russian/module/*
+!catalog/language/russian/module/worktime.php
+catalog/controller/*
+!catalog/controller/module
+catalog/controller/module/*
+!catalog/controller/module/worktime.php
+catalog/view/*
+!catalog/view/theme
+catalog/view/theme/*
+!catalog/view/theme/default
+catalog/view/theme/default/*
+!catalog/view/theme/default/template
+catalog/view/theme/default/template/*
+!catalog/view/theme/default/template/module
+catalog/view/theme/default/template/module/*
+!catalog/view/theme/default/template/module/worktime.tpl
